--- a/stock-service/pom.xml
+++ b/stock-service/pom.xml
@@ -41,7 +41,7 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
-            <groupId>pl.piomin</groupId>
+            <groupId>com.nrapendra</groupId>
             <artifactId>base-domain</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
