--- a/base-domain/pom.xml
+++ b/base-domain/pom.xml
@@ -13,6 +13,16 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <sonar.moduleKey>${artifactId}</sonar.moduleKey>
+        <lombok.version>1.18.34</lombok.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
